# SensEngine

./: CMakeLists.txt  DefinitionTypes.hpp  Drawbuffer.cpp  NOTICE  Pipeline.cpp  Pipeline.hpp  Pipeline_w32.cpp  Pipeline_x11.cpp  RenderTarget.cpp  SensEngine.kdev4  Texture.cpp  atomic.hpp  main.cpp  pysense.cpp  queue.hpp  renderer.kdev4
client/: Client.cpp  Client.hpp  ClientPlatform_w32.hpp  ClientPlatform_x11.hpp  Client_config.in.cpp  Client_w32_ogl.cpp  Client_x11_ogl.cpp  DataManager.cpp  DataManager.hpp
client/python/: DataManager.cpp  PyDataManager.hpp
cmake/: FindBerkelium.cmake  FindPython.cmake  SenseConfig.cmake
data/definitions/: entdef.py  testdef.sdef
data/html/: hud.html
data/materials/: guis.smtl  matdef.py  misc.smtl
data/models/: monkey.sbm
data/shaders/: flatlight.fs  flatlight.vs  guiview.fs  guiview.vs  simple.fs  simple.vs
docs/: shaders.rst
entity/: Component.hpp  CoordinateComponent.cpp  CoordinateComponent.hpp  DrawableComponent.cpp  DrawableComponent.hpp  Entity.cpp  Entity.hpp  stubs.cpp
entity/message/: DrawMessage.hpp  LoadMessage.hpp  vtables.cpp
pipeline/: Builtins.cpp  Builtins.hpp  DefinitionTypes.hpp  Drawable.hpp  Drawbuffer.cpp  Drawbuffer.hpp  Image.hpp  Loader.cpp  Loader.hpp  Material.cpp  Material.hpp  Panel.hpp  Pipeline.cpp  Pipeline.hpp  Pipeline_w32.cpp  Pipeline_x11.cpp  RenderTarget.cpp  RenderTarget.hpp  Texture.cpp  Texture.hpp  Webview.cpp  Webview.hpp  dummy.cpp  glexcept.hpp  interface.hpp
pipeline/ogl/: CMakeLists.txt  Loader.cpp  Pipeline.cpp  Webview.cpp  Webview.hpp  glexcept.hpp  implementation.hpp
python/: module.cpp  module.hpp  pywarnings.hpp
python/client/: DataManager.cpp  PyDataManager.hpp
python/entity/: Component.cpp  CoordinateComponent.cpp  DrawableComponent.cpp  Entity.cpp  EntityFactory.cpp  PyEntity.hpp  api.hpp
python/pipeline/: Loader.cpp  MaterialDefinition.cpp  Pipeline.cpp  PyLoader.hpp  PyMaterialDef.hpp
python/world/: DataManager.cpp  PyDataManager.hpp
util/: atomic.hpp  queue.hpp  util.hpp
world/: DataManager.cpp  DataManager.hpp
